examples/lua/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              #- match:
              #    prefix: "/"
              #  route:
              #    cluster: web_service
              #  typed_per_filter_config:
              #    lua_filter_with_custom_name_1:
              #      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
              #      source_code:
              #        inline_string: |
              #          function envoy_on_response(response_handle)
              #            response_handle:headers():add("header_key_1", "header_value_1")
              #          end
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: lua_filter_with_custom_name_0
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string: |
                  function envoy_on_request(request_handle)
                    --request_handle:headers():add("foo", mylibrary.foobar())
                    require("resty_ffi")
                    local demo = ngx.load_ffi("ffi_go_echo")
                    local ok, res = demo:foobar("foobar", request_handle)
                    assert(ok)
                    assert(res == "foobar")
                    local demo = ngx.load_ffi("resty_ffi_python", "ffi.echo?,init", {is_global = true})
                    local ok, res = demo:echo("hello", request_handle)
                    assert(ok)
                    assert(res == "hello")
                  end
          - name: lua_filter_with_custom_name_1
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              default_source_code:
                inline_string:
                  function envoy_on_request(request_handle)
                  end
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: web_service
    type: STRICT_DNS  # static
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 139.162.123.134
                port_value: 80
